Рефакторинг. Часть 2 (#20)
* рефакторинг

* рефакторинг

* sq fixes

* gradle up

* fix plugins

* Добавил явную зависимость от фреймворка

* license

* license