@@ -1,4 +1,4 @@
-/*
+/**
  * This file is a part of ANTLR.
  *
  * Copyright (c) 2012-2025 The ANTLR Project. All rights reserved.
@@ -61,7 +61,6 @@ import java.io.Writer;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -78,8 +77,7 @@ public class Tool {
   public static final String GRAMMAR_EXTENSION = ".g4";
   public static final String LEGACY_GRAMMAR_EXTENSION = ".g";
 
-  public static final List<String> ALL_GRAMMAR_EXTENSIONS =
-    Collections.unmodifiableList(Arrays.asList(GRAMMAR_EXTENSION, LEGACY_GRAMMAR_EXTENSION));
+  public static final List<String> ALL_GRAMMAR_EXTENSIONS = List.of(GRAMMAR_EXTENSION, LEGACY_GRAMMAR_EXTENSION);
 
   public enum OptionArgType {NONE, STRING} // NONE implies boolean
 
@@ -292,7 +290,9 @@ public class Tool {
       }
       if (Grammar.parserOptions.contains(option) ||
         Grammar.lexerOptions.contains(option)) {
-        if (grammarOptions == null) grammarOptions = new HashMap<>();
+        if (grammarOptions == null) {
+          grammarOptions = new HashMap<>();
+        }
         grammarOptions.put(option, value);
       } else {
         errMgr.grammarError(ErrorType.ILLEGAL_OPTION,
@@ -314,12 +314,6 @@ public class Tool {
       if (gen_dependencies) {
         BuildDependencyGenerator dep =
           new BuildDependencyGenerator(this, g);
-				/*
-					List outputFiles = dep.getGeneratedFileList();
-					List dependents = dep.getDependenciesFileList();
-					System.out.println("output: "+outputFiles);
-					System.out.println("dependents: "+dependents);
-					 */
         System.out.println(dep.getDependencies().render());
 
       } else if (errMgr.getNumErrors() == 0) {
@@ -362,14 +356,9 @@ public class Tool {
         if (errMgr.getNumErrors() > prevErrors) {
           return;
         }
-
-//				System.out.println("lexer tokens="+lexerg.tokenNameToTypeMap);
-//				System.out.println("lexer strings="+lexerg.stringLiteralToTypeMap);
       }
     }
     if (g.implicitLexer != null) g.importVocab(g.implicitLexer);
-//		System.out.println("tokens="+g.tokenNameToTypeMap);
-//		System.out.println("strings="+g.stringLiteralToTypeMap);
     processNonCombinedGrammar(g, gencode);
   }
 
@@ -502,23 +491,10 @@ public class Tool {
       root.fileName = fileName;
       String grammarName = root.getChild(0).getText();
 
-      GrammarAST tokenVocabNode = findOptionValueAST(root, "tokenVocab");
+      var tokenVocabNode = findOptionValueAST(root, "tokenVocab");
       // Make grammars depend on any tokenVocab options
       if (tokenVocabNode != null) {
-        String vocabName = tokenVocabNode.getText();
-        // Strip quote characters if any
-        int len = vocabName.length();
-        int firstChar = vocabName.charAt(0);
-        int lastChar = vocabName.charAt(len - 1);
-        if (len >= 2 && firstChar == '\'' && lastChar == '\'') {
-          vocabName = vocabName.substring(1, len - 1);
-        }
-        // If the name contains a path delimited by forward slashes,
-        // use only the part after the last slash as the name
-        int lastSlash = vocabName.lastIndexOf('/');
-        if (lastSlash >= 0) {
-          vocabName = vocabName.substring(lastSlash + 1);
-        }
+        var vocabName = getVocabName(tokenVocabNode);
         g.addEdge(grammarName, vocabName);
       }
       // add cycle to graph so we always process a grammar if no error
@@ -538,6 +514,24 @@ public class Tool {
     }
 
     return sortedRoots;
+  }
+
+  private static String getVocabName(GrammarAST tokenVocabNode) {
+    var vocabName = tokenVocabNode.getText();
+    // Strip quote characters if any
+    var len = vocabName.length();
+    var firstChar = vocabName.charAt(0);
+    var lastChar = vocabName.charAt(len - 1);
+    if (len >= 2 && firstChar == '\'' && lastChar == '\'') {
+      vocabName = vocabName.substring(1, len - 1);
+    }
+    // If the name contains a path delimited by forward slashes,
+    // use only the part after the last slash as the name
+    var lastSlash = vocabName.lastIndexOf('/');
+    if (lastSlash >= 0) {
+      vocabName = vocabName.substring(lastSlash + 1);
+    }
+    return vocabName;
   }
 
   /**
@@ -818,23 +812,7 @@ public class Tool {
    */
   public File getOutputDirectory(String fileNameWithPath) {
     File outputDir;
-    String fileDirectory;
-
-    // Some files are given to us without a PATH but should should
-    // still be written to the output directory in the relative path of
-    // the output directory. The file directory is either the set of sub directories
-    // or just or the relative path recorded for the parent grammar. This means
-    // that when we write the tokens files, or the .java files for imported grammars
-    // taht we will write them in the correct place.
-    if ((fileNameWithPath == null) || (fileNameWithPath.lastIndexOf(File.separatorChar) == -1)) {
-      // No path is included in the file name, so make the file
-      // directory the same as the parent grammar (which might sitll be just ""
-      // but when it is not, we will write the file in the correct place.
-      fileDirectory = ".";
-
-    } else {
-      fileDirectory = fileNameWithPath.substring(0, fileNameWithPath.lastIndexOf(File.separatorChar));
-    }
+    var fileDirectory = getFileDirectory(fileNameWithPath);
     if (haveOutputDir) {
       if (exact_output_dir) {
         // -o /tmp /var/lib/t.g4 => /tmp/T.java
@@ -842,9 +820,8 @@ public class Tool {
         // -o . /usr/lib/t.g4 => ./T.java
         // -o /tmp subdir/t.g4 => /tmp/T.java
         outputDir = new File(outputDirectory);
-      } else if (fileDirectory != null &&
-        (new File(fileDirectory).isAbsolute() ||
-          fileDirectory.startsWith("~"))) { // isAbsolute doesn't count this :(
+      } else if (new File(fileDirectory).isAbsolute() || fileDirectory.startsWith("~")) {
+        // isAbsolute doesn't count this :(
 
         // -o /tmp /var/lib/t.g4 => /tmp/T.java
         // -o subdir/output /usr/lib/t.g4 => subdir/output/T.java
@@ -854,11 +831,7 @@ public class Tool {
         outputDir = new File(outputDirectory);
       } else {
         // -o /tmp subdir/t.g4 => /tmp/subdir/T.java
-        if (fileDirectory != null) {
-          outputDir = new File(outputDirectory, fileDirectory);
-        } else {
-          outputDir = new File(outputDirectory);
-        }
+        outputDir = new File(outputDirectory, fileDirectory);
       }
     } else {
       // they didn't specify a -o dir so just write to location
@@ -868,6 +841,27 @@ public class Tool {
       outputDir = new File(fileDirectory);
     }
     return outputDir;
+  }
+
+  private static String getFileDirectory(String fileNameWithPath) {
+    String fileDirectory;
+
+    // Some files are given to us without a PATH but should should
+    // still be written to the output directory in the relative path of
+    // the output directory. The file directory is either the set of sub directories
+    // or just or the relative path recorded for the parent grammar. This means
+    // that when we write the tokens files, or the .java files for imported grammars
+    // that we will write them in the correct place.
+    if ((fileNameWithPath == null) || (fileNameWithPath.lastIndexOf(File.separatorChar) == -1)) {
+      // No path is included in the file name, so make the file
+      // directory the same as the parent grammar (which might still be just ""
+      // but when it is not, we will write the file in the correct place.
+      fileDirectory = ".";
+
+    } else {
+      fileDirectory = fileNameWithPath.substring(0, fileNameWithPath.lastIndexOf(File.separatorChar));
+    }
+    return fileDirectory;
   }
 
   protected void writeDOTFile(Grammar g, Rule r, String dot) throws IOException {
